--- a/Front-end/material-dashboard-angular2-master/material-dashboard-angular2-master/package.json
+++ b/Front-end/material-dashboard-angular2-master/material-dashboard-angular2-master/package.json
@@ -23,6 +23,7 @@
     "@angular/compiler": "^14.2.0",
     "@angular/core": "^14.2.0",
     "@angular/elements": "^14.2.0",
+    "@angular/fire": "^6.0.5",
     "@angular/forms": "^14.2.0",
     "@angular/localize": "^14.2.0",
     "@angular/material": "^14.2.0",
@@ -38,6 +39,7 @@
     "classlist.js": "1.1.20150312",
     "eslint": "^8.11.0",
     "express": "4.17.3",
+    "firebase": "^8.0.2",
     "googleapis": "99.0.0",
     "hammerjs": "2.0.8",
     "jquery": "3.6.0",
