--- a/Back-end/gps/src/main/resources/application.properties
+++ b/Back-end/gps/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/FortSeg
+spring.datasource.url=jdbc:postgresql://postgres:5432/FortSeg
 spring.datasource.username=postgres
 spring.datasource.password=Pedrogmr1
 spring.jpa.show-sql=true
